--- a/docs/reference/items/inventory.mdx
+++ b/docs/reference/items/inventory.mdx
@@ -3,7 +3,7 @@ id: inventory
 title: Inventory Slots & Materials
 ---
 
-import Materials from "../../src/components/materials";
+import Materials from "../../../src/components/materials";
 
 <div className="row">
   <div className="col col--12">
