--- a/util/src/main/i18n/templates/moderation.properties
+++ b/util/src/main/i18n/templates/moderation.properties
@@ -175,3 +175,5 @@ vanish.chat.deny = You can only use the admin chat while vanished
 
 vanish.hotbar = You are currently vanished
 
+vanish.login.auto = Majority of staff are vanished. Due to this we've vanished you as well
+vanish.login.domain = You logged in using {0} so we auto-vanished you
