Fix unstyled table header
Signed-off-by: Indicado <indicado@walrus.gg>

--- a/docs/modules/blocks/blockdrops.mdx
+++ b/docs/modules/blocks/blockdrops.mdx
@@ -51,7 +51,7 @@ Custom drops also apply to blocks broken by explosions. The custom drops are red
         <th>Attribute</th>
         <th>Description</th>
         <th>Value</th>
-        <td>Default</td>
+        <th>Default</th>
       </tr>
     </thead>
     <tbody>
