--- a/util/src/main/i18n/templates/moderation.properties
+++ b/util/src/main/i18n/templates/moderation.properties
@@ -175,4 +175,4 @@ vanish.chat.deny = You can only use the admin chat while vanished
 
 vanish.hotbar = You are currently vanished
 
-vanish.login.domain = You logged in using {0} so we auto-vanished you
+vanish.login.domain = You logged in with {0} so we auto-vanished you
