--- a/docs/modules/mechanics/spawners.mdx
+++ b/docs/modules/mechanics/spawners.mdx
@@ -3,7 +3,7 @@ id: spawners
 title: Spawners
 ---
 
-The <label>`<spawners>`</label> module provides an easy way of spawning entities and items into the world, without using actual spawner blocks and NBT editors.
+The `<spawners>` module provides an easy way of spawning entities and items into the world, without using actual spawner blocks and NBT editors.
 
 The module uses the same syntax as <a href="/modules/gear/kits">kits</a> to define items and makes use of a specific <a href="/modules/mechanics/regions">region</a> to spawn them in.
 
@@ -61,7 +61,7 @@ The module uses the same syntax as <a href="/modules/gear/kits">kits</a> to defi
           XML.
         </td>
         <td>String</td>
-        <td></td>
+        <td />
       </tr>
       <tr>
         <td>
@@ -74,7 +74,7 @@ The module uses the same syntax as <a href="/modules/gear/kits">kits</a> to defi
         <td>
           <a href="/modules/mechanics/regions">Region</a>
         </td>
-        <td></td>
+        <td />
       </tr>
       <tr>
         <td>
@@ -89,7 +89,7 @@ The module uses the same syntax as <a href="/modules/gear/kits">kits</a> to defi
         <td>
           <a href="/modules/mechanics/regions">Region</a>
         </td>
-        <td></td>
+        <td />
       </tr>
       <tr>
         <td>
@@ -158,7 +158,7 @@ The module uses the same syntax as <a href="/modules/gear/kits">kits</a> to defi
         <td>
           <a href="/modules/mechanics/filters">Filter</a>
         </td>
-        <td></td>
+        <td />
       </tr>
     </tbody>
   </table>
@@ -191,7 +191,7 @@ The module uses the same syntax as <a href="/modules/gear/kits">kits</a> to defi
   </table>
 </div>
 
-##### Example
+_Examples_
 
 This will spawn golden swords (in stacks of 1) in the red base, provided there is at least 1 person in that base. The swords will spawn in ramdom intervals of 2s - 10s. The <label>filter</label> insures that only players on the red team can trigger the spawner.
 
