Improved settings menu implementation
InventoryMenuManager is now a singleton
Various naming changes
Various optimisations

Signed-off-by: Rafi Baum <rafi@ukbaums.com>

--- a/util/src/main/i18n/templates/ui.properties
+++ b/util/src/main/i18n/templates/ui.properties
@@ -81,7 +81,7 @@ setting.sounds.description = Status: {0}
 
 setting.sounds.value.messages = DMs
 
-setting.vote = Vote Menu
+setting.vote = Vote Book
 
 # {0} = vote menu (e.g. "On", "Off")
 setting.vote.description = Status: {0}
