Replace incorrect class= tags
Signed-off-by: Indicado <indicado@walrus.gg>

--- a/docs/modules/mechanics/gamerules.mdx
+++ b/docs/modules/mechanics/gamerules.mdx
@@ -7,7 +7,7 @@ Minecraft's built in game rules can be set via the `<gamerules>` module. Not all
 
 When stopping the daylight cycle, you should either use the `<doDaylightCycle>` gamerule, or the [timelock](/modules/other_settings#timelock) element. One will overwrite the other, so be consistent.
 
-<div class="table-container">
+<div className="table-container">
   <table>
     <thead>
       <tr>
@@ -28,7 +28,7 @@ When stopping the daylight cycle, you should either use the `<doDaylightCycle>` 
 
 ##### Supported Gamerule Sub-elements
 
-<div class="table-container">
+<div className="table-container">
   <table>
     <thead>
       <tr>
@@ -44,7 +44,7 @@ When stopping the daylight cycle, you should either use the `<doDaylightCycle>` 
         </td>
         <td>Toggles whether firespread occurs.</td>
         <td>
-          <span class="badge badge--primary">true / false</span>
+          <span className="badge badge--primary">true / false</span>
         </td>
       </tr>
       <tr>
@@ -53,7 +53,7 @@ When stopping the daylight cycle, you should either use the `<doDaylightCycle>` 
         </td>
         <td>Toggles whether tile entities drop.</td>
         <td>
-          <span class="badge badge--primary">true / false</span>
+          <span className="badge badge--primary">true / false</span>
         </td>
       </tr>
       <tr>
@@ -62,7 +62,7 @@ When stopping the daylight cycle, you should either use the `<doDaylightCycle>` 
         </td>
         <td>Toggles whether mobs drop loot on death.</td>
         <td>
-          <span class="badge badge--primary">true / false</span>
+          <span className="badge badge--primary">true / false</span>
         </td>
       </tr>
       <tr>
@@ -74,7 +74,7 @@ When stopping the daylight cycle, you should either use the `<doDaylightCycle>` 
           damage.
         </td>
         <td>
-          <span class="badge badge--primary">true / false</span>
+          <span className="badge badge--primary">true / false</span>
         </td>
       </tr>
       <tr>
@@ -83,7 +83,7 @@ When stopping the daylight cycle, you should either use the `<doDaylightCycle>` 
         </td>
         <td>Toggles whether or not players naturally regain heath.</td>
         <td>
-          <span class="badge badge--primary">true / false</span>
+          <span className="badge badge--primary">true / false</span>
         </td>
       </tr>
       <tr>
@@ -92,7 +92,7 @@ When stopping the daylight cycle, you should either use the `<doDaylightCycle>` 
         </td>
         <td>Toggles whether or not the time tick occurs.</td>
         <td>
-          <span class="badge badge--primary">true / false</span>
+          <span className="badge badge--primary">true / false</span>
         </td>
       </tr>
     </tbody>
@@ -109,7 +109,7 @@ Example
 
 ##### Unsupported Gamerules
 
-<div class="table-container">
+<div className="table-container">
   <table>
     <thead>
       <tr>
