--- a/docs/modules/information/rules.mdx
+++ b/docs/modules/information/rules.mdx
@@ -5,7 +5,7 @@ title: Rules
 
 You can use the rules module to add custom rules to your map that are not already included within your own established server-wide rules. Regions and filters should be used to enforce access and block rules.
 
-<div class="table-container">
+<div className="table-container">
   <table>
     <thead>
       <tr>
@@ -33,7 +33,7 @@ You can use the rules module to add custom rules to your map that are not alread
         </td>
         <td>A custom map rule.</td>
         <td>
-          <span class="badge badge--primary">Text</span>
+          <span className="badge badge--primary">Text</span>
         </td>
       </tr>
     </tbody>
