Fix badge errors
Signed-off-by: Indicado <indicado@walrus.gg>

--- a/docs/modules/information/broadcasts.mdx
+++ b/docs/modules/information/broadcasts.mdx
@@ -104,7 +104,7 @@ map. It should not be used to for generic OCN related messages.
           </i>
         </td>
         <td>
-          <span className="label label-primary">Number</span>
+          <span className="badge badge--primary">Number</span>
         </td>
       </tr>
       <tr>
