--- a/docs/modules/mechanics/damage.mdx
+++ b/docs/modules/mechanics/damage.mdx
@@ -138,7 +138,7 @@ The `BLOCK_EXPLOSION` damage cause has several extended attributes to customize 
           explosion.
         </td>
         <td>
-          <span className="label label-primary">true/false</span>
+          <span className="badge badge--primary">true/false</span>
         </td>
         <td>true</td>
       </tr>
@@ -148,7 +148,7 @@ The `BLOCK_EXPLOSION` damage cause has several extended attributes to customize 
         </td>
         <td>Damage to the person that caused the explosion.</td>
         <td>
-          <span className="label label-primary">true/false</span>
+          <span className="badge badge--primary">true/false</span>
         </td>
         <td>true</td>
       </tr>
@@ -161,7 +161,7 @@ The `BLOCK_EXPLOSION` damage cause has several extended attributes to customize 
           explosion.
         </td>
         <td>
-          <span className="label label-primary">true/false</span>
+          <span className="badge badge--primary">true/false</span>
         </td>
         <td>true</td>
       </tr>
@@ -171,7 +171,7 @@ The `BLOCK_EXPLOSION` damage cause has several extended attributes to customize 
         </td>
         <td>Any other damage caused by the explosion.</td>
         <td>
-          <span className="label label-primary">true/false</span>
+          <span className="badge badge--primary">true/false</span>
         </td>
         <td>true</td>
       </tr>
