Fix code block not having XML syntax highlighting
Signed-off-by: Indicado <indicado@walrus.gg>

--- a/docs/guides/xml-pointers/conventions.mdx
+++ b/docs/guides/xml-pointers/conventions.mdx
@@ -35,7 +35,7 @@ Modules that have sub elements such as the `author` tag must be indented with 4 
 
 There should be no white spaces between modules. That means the end of one module should have the start of another on the immediate next line.
 
-```
+```xml
 <!-- Correct -->
 <?xml version="1.0"?>
 <map proto="1.4.0">
